PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-108_produit_invalide1/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:14: error: invalid type argument of unary ‘*’ (have ‘int’)
    3 |     return 2**1;
      |              ^~

return code: 1
